network/template.yaml
AWSTemplateFormatVersion: "2010-09-09"

#------------------------------------------------------
# Parameters
#------------------------------------------------------
Parameters:
  ProjectName:
    Type: String
  Env:
    Type: String
    Default: dev
  
  VpcCidr:
    Description: IP range for VPC
    Type: String
  PublicSubnet1Cidr:
    Type: String
    Description: CIDR block for public subnet 1
  PublicSubnet2Cidr:
    Type: String
    Description: CIDR block for public subnet 2
  PrivateAppSubnet1Cidr:
    Type: String
    Description: CIDR block for private app subnet 1
  PrivateAppSubnet2Cidr:
    Type: String
    Description: CIDR block for private app subnet 2
  PrivateDataSubnet1Cidr:
    Type: String
    Description: CIDR block for private data subnet 1
  PrivateDataSubnet2Cidr:
    Type: String
    Description: CIDR block for private data subnet 2


#------------------------------------------------------
# Resources: VPC, Subnets, NAT, Routes
#------------------------------------------------------
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-vpc
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Env

  #------------------------------------------------------
  # Internet Gateway
  #------------------------------------------------------
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-ig
        - Key: Environment
          Value: !Ref Env

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  #------------------------------------------------------
  # Public Subnets
  #------------------------------------------------------
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1Cidr
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-public-subnet-1
        - Key: Environment
          Value: !Ref Env

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2Cidr
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-public-subnet-2
        - Key: Environment
          Value: !Ref Env

  #------------------------------------------------------
  # Private App Subnets
  #------------------------------------------------------
  PrivateAppSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateAppSubnet1Cidr
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-private-app-subnet-1
        - Key: Environment
          Value: !Ref Env

  PrivateAppSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateAppSubnet2Cidr
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-private-app-subnet-2
        - Key: Environment
          Value: !Ref Env

  #------------------------------------------------------
  # Private Data Subnets
  #------------------------------------------------------
  PrivateDataSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateDataSubnet1Cidr
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-private-data-subnet-1
        - Key: Environment
          Value: !Ref Env

  PrivateDataSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: { Ref: AWS::Region }
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateDataSubnet2Cidr
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-private-data-subnet-2
        - Key: Environment
          Value: !Ref Env

  #------------------------------------------------------
  # NAT Gateway
  #------------------------------------------------------
  NatGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: VPC
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-nat-gw
        - Key: Environment
          Value: !Ref Env

  #------------------------------------------------------
  # Public Route Table
  #------------------------------------------------------
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-public-rt
        - Key: Environment
          Value: !Ref Env

  RouteInternetGateway:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  #------------------------------------------------------
  # Private Route Table
  #------------------------------------------------------
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Env}-private-rt
        - Key: Environment
          Value: !Ref Env

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  #------------------------------------------------------
  # Subnet Associations
  #------------------------------------------------------
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateAppSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateAppSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateAppSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateAppSubnet2
      RouteTableId: !Ref PrivateRouteTable

  PrivateDataSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateDataSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateDataSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateDataSubnet2
      RouteTableId: !Ref PrivateRouteTable

#------------------------------------------------------
# Outputs
#------------------------------------------------------
Outputs:
  VpcId:
    Value: !Ref VPC
    Export:
      Name: !Sub ${ProjectName}-${Env}-vpc-id

  PublicSubnet1Id:
    Description: ID of the public subnet 1
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${ProjectName}-${Env}-public-subnet-1-id
  PublicSubnet2Id:
    Description: ID of the public subnet 2
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${ProjectName}-${Env}-public-subnet-2-id

  PrivateAppSubnet1Id:
    Description: ID of the app private subnet 1
    Value: !Ref PrivateAppSubnet1
    Export:
      Name: !Sub ${ProjectName}-${Env}-private-app-subnet-1-id
  PrivateAppSubnet2Id:
    Description: ID of the app private subnet 2
    Value: !Ref PrivateAppSubnet1
    Export:
      Name: !Sub ${ProjectName}-${Env}-private-app-subnet-2-id 

  PrivateDataSubnet1Id:
    Description: ID of the data private subnet 1
    Value: !Ref PrivateDataSubnet1
    Export:
      Name: !Sub ${ProjectName}-${Env}-private-data-subnet-1-id
  PrivateDataSubnet2Id:
    Description: ID of the data private subnet 2
    Value: !Ref PrivateDataSubnet2
    Export:
      Name: !Sub ${ProjectName}-${Env}-private-data-subnet-2-id
